--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Online Banking</title>
-	<link rel="stylesheet" type="text/css" href="Fidelity.css">
+	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 	<div class="container">
